--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -8,6 +8,65 @@
 </head>
 <body>
 
+<div class="teeth-top" id="black"></div>
+<div class="teeth-top" id="mian"></div>
+<div class="teeth-top" id="blue"></div>
+<div class="teeth-top" id="orange"></div>
+<div class="teeth-top" id="lblue"></div>
+
+<div class="teeth-bot" id="black"></div>
+<div class="teeth-bot" id="mian"></div>
+<div class="teeth-bot" id="blue"></div>
+<div class="teeth-bot" id="orange"></div>
+<div class="teeth-bot" id="lblue"></div>
+
+  <div class="teeth-top" id="black"></div>
+  <div class="teeth-top" id="mian"></div>
+  <div class="teeth-top" id="blue"></div>
+  <div class="teeth-top" id="orange"></div>
+  <div class="teeth-top" id="lblue"></div>
+
+  <div class="teeth-bot" id="black"></div>
+  <div class="teeth-bot" id="mian"></div>
+  <div class="teeth-bot" id="blue"></div>
+  <div class="teeth-bot" id="orange"></div>
+  <div class="teeth-bot" id="lblue"></div>
+
+  <div class="teeth-top" id="black"></div>
+  <div class="teeth-top" id="mian"></div>
+  <div class="teeth-top" id="blue"></div>
+  <div class="teeth-top" id="orange"></div>
+  <div class="teeth-top" id="lblue"></div>
+
+  <div class="teeth-bot" id="black"></div>
+  <div class="teeth-bot" id="mian"></div>
+  <div class="teeth-bot" id="blue"></div>
+  <div class="teeth-bot" id="orange"></div>
+  <div class="teeth-bot" id="lblue"></div>
+
+  <div class="teeth-top" id="black"></div>
+  <div class="teeth-top" id="mian"></div>
+  <div class="teeth-top" id="blue"></div>
+  <div class="teeth-top" id="orange"></div>
+  <div class="teeth-top" id="lblue"></div>
+
+  <div class="teeth-bot" id="black"></div>
+  <div class="teeth-bot" id="mian"></div>
+  <div class="teeth-bot" id="blue"></div>
+  <div class="teeth-bot" id="orange"></div>
+  <div class="teeth-bot" id="lblue"></div>
+
+  <div class="teeth-top" id="black"></div>
+  <div class="teeth-top" id="mian"></div>
+  <div class="teeth-top" id="blue"></div>
+  <div class="teeth-top" id="orange"></div>
+  <div class="teeth-top" id="lblue"></div>
+
+  <div class="teeth-bot" id="black"></div>
+  <div class="teeth-bot" id="mian"></div>
+  <div class="teeth-bot" id="blue"></div>
+  <div class="teeth-bot" id="orange"></div>
+  <div class="teeth-bot" id="lblue"></div>
 
 </body>
 </html>
